--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'io.qameta.allure' version '2.11.2'
 }
 
-group 'guru.qa'
+group 'org.example'
 version '1.0-SNAPSHOT'
 
 allure {
@@ -19,24 +19,22 @@ allure {
         }
     }
 }
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
     testImplementation(
-            'org.junit.jupiter:junit-jupiter:5.9.3',
+            'org.junit.jupiter:junit-jupiter-api:5.9.3',
             'com.codeborne:selenide:6.17.1',
-            'io.qameta.allure:allure-selenide:2.23.0')
-    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.9.0')
-}
+            'io.qameta.allure:allure-selenide:2.23.0'
+    )
 
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.9.3')
+}
 
 test {
     useJUnitPlatform()
-    systemProperties(System.getProperties())}
-
-tasks.withType(Test) {
-    useJUnitPlatform()
-    jvmArgs '--enable-preview'
+    systemProperties(System.getProperties())
 }
