--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,8 +24,9 @@ jobs:
             allure_results: build/allure-results
             allure_report: allure-report
             allure_history: allure-history
-        - uses: peaceiris/actions-gh-pages@v2
+        - name: Deploy report to Github Pages
           if: always()
+          uses: peaceiris/actions-gh-pages@v2
           env:
             PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             PUBLISH_BRANCH: gh-pages
