--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,9 +24,8 @@ jobs:
             allure_results: build/allure-results
             allure_report: allure-report
             allure_history: allure-history
-        - name: Deploy report to Github Pages
+        - uses: peaceiris/actions-gh-pages@v2
           if: always()
-          uses: peaceiris/actions-gh-pages@v2
           env:
             PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             PUBLISH_BRANCH: gh-pages
