--- a/build.gradle
+++ b/build.gradle
@@ -3,18 +3,18 @@ plugins {
     id 'io.qameta.allure' version '2.11.2'
 }
 
-group 'org.example'
+group 'guru.qa'
 version '1.0-SNAPSHOT'
 
 allure {
     report {
-        version.set("2.19.0")
+        version.set("2.23.0")
     }
     adapter { // отвечает за появление папочки build/allure-results
         aspectjWeaver.set(true) //обработка аннотации @Step
         frameworks {
             junit5 { //название фреймворка
-                adapterVersion.set("2.19.0") //версия интеграции фреймворка и Allure
+                adapterVersion.set("2.23.0") //версия интеграции фреймворка и Allure
             }
         }
     }
@@ -30,7 +30,6 @@ dependencies {
             'com.codeborne:selenide:6.17.1',
             'io.qameta.allure:allure-selenide:2.23.0'
     )
-
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.9.3')
 }
 
